# docx2pdf-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  docx2pdf-api.postman_collection.json  pyproject.toml  requirements.txt  serve.py
.github/workflows/: ci.yml  release.yml
docx2pdf_py/: __init__.py  api.py  backends.py  cli.py  converter.py  engines.py  fonts.py  formatting.py  models.py  webserver.py
tests/: conftest.py  e2e_smoke.py  test_cli.py  test_converter.py  test_engines.py  test_features.py  test_fidelity.py  test_fuzz.py  test_orchestration.py  test_processes.py  test_real_fixtures.py  test_robustness.py  test_snapshots.py
tests/benchmarks/: test_perf.py
tests/snapshots/: bold_italic.html  plain_paragraph.html  table.html
