[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx2pdf-py"
version = "0.1.0"
description = "Faithful .docx to PDF conversion using pure Python (lxml + WeasyPrint)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Antonio Lujano Luna" }]
keywords = ["docx", "pdf", "word", "ooxml", "weasyprint", "conversion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "weasyprint>=60,<72",
    "lxml>=5,<8",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "pytest-cov>=4", "mypy>=1", "lxml-stubs", "bandit>=1.7"]

[project.urls]
Homepage = "https://github.com/antoniolujanoluna/docx2pdf-py"
Repository = "https://github.com/antoniolujanoluna/docx2pdf-py"
Issues = "https://github.com/antoniolujanoluna/docx2pdf-py/issues"

[project.scripts]
docx2pdf-py = "docx2pdf_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["docx2pdf_py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E702: code uses ';' sparingly for compact dict merges.
ignore = ["E702"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.bandit]
# All skips are false positives for this codebase:
# B404/B603: subprocess is controlled (no shell=True, no untrusted input in cmd).
# B112: try/except/continue in word_available() intentionally swallows ImportError.
# B607: 'osascript' and 'soffice' are known system binaries, not untrusted paths.
skips = ["B404", "B603", "B112", "B607"]

[tool.coverage.run]
source = ["docx2pdf_py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
